# stradivarius

./: .gitignore  README.md  mise.toml  pyproject.toml  zensical.toml
.github/workflows/: doc.yml
docs/: PLAN.md  index.md
src/stradivarius/: cli.py  constants.py
src/stradivarius/data/: __init__.py  fetch.py  schema.py
src/stradivarius/tui/: app.py  stradivarius.tcss
src/stradivarius/tui/screens/: buffer.py  compose.py  library.py
src/stradivarius/tui/widgets/: filter_bar.py  status_bar.py  track_table.py
tests/: conftest.py  musiqueàsuivre.json
tests/data/: test_fetch.py
tests/fixtures/: playlist.json
